# roblox-slang

./: .gitignore  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aftman.toml  foreman.toml  rokit.toml  selene.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  release.yml  welcome.yml
benches/: performance_bench.rs
docs/: getting-started.md  index.md
docs/guides/: configuration.md  pluralization.md  roblox-cloud.md  string-interpolation.md
docs/integration/: rojo.md
docs/reference/: cli-reference.md
src/: lib.rs  main.rs
src/cli/: build.rs  download.rs  import.rs  init.rs  migrate.rs  mod.rs  sync.rs  upload.rs  validate.rs  watch.rs
src/config/: defaults.rs  mod.rs  schema.rs
src/generator/: csv.rs  luau.rs  mod.rs  types.rs
src/migrator/: custom_json.rs  gettext.rs  key_transform.rs  mod.rs
src/parser/: json.rs  mod.rs  overrides.rs  types.rs  yaml.rs
src/roblox/: auth.rs  client.rs  merge.rs  mod.rs  rate_limit.rs  sync.rs  types.rs
src/utils/: flatten.rs  format.rs  locales.rs  mod.rs  plurals.rs  validation.rs
src/validator/: conflicts.rs  coverage.rs  missing.rs  mod.rs  unused.rs
tests/: cli_tests.rs  edge_cases.rs  integration_tests.rs  roblox_integration_tests.rs  stress_tests.rs
tests/basic/: README.md  overrides.yaml  slang-roblox.yaml
tests/basic/output/: Translations.lua
tests/basic/src/: test.server.lua
tests/common/: mod.rs
(+5 files in other folders)
