[package]
name = "roblox-slang"
version = "1.1.2"
rust-version = "1.88"
authors = ["Iqbal Fauzi <iqbalfauzien@proton.me>"]
license = "MIT"
readme = "README.md"
description = "Type-safe internationalization for Roblox experiences"
repository = "https://github.com/mathtechstudio/roblox-slang"
keywords = ["roblox", "i18n", "localization", "gamedev"]
categories = ["command-line-utilities", "localization", "game-development"]
edition = "2021"

exclude = ["/tests/**"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[features]
default = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
anyhow = "1.0"
notify = "6.1"
notify-debouncer-full = "0.3"
env_logger = "0.10"
log = "0.4"
heck = "0.5"  # For case conversion (camelCase, snake_case, etc.)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros", "fs"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"
mockito = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "performance_bench"
harness = false